crates/sotf-plugins/tests/snapshots/render_plan_snapshots__denoiser__denoiser__desktop_1800.snap
---
source: crates/sotf-plugins/tests/render_plan_snapshots.rs
assertion_line: 60
expression: plan
---
{
  "plugin_type": "denoiser",
  "width": 1800.0,
  "design_language": "neutral",
  "corner_radius_md": 8.0,
  "min_touch_target": 32.0,
  "toggle_variant": "capsule",
  "label_position": "below",
  "orientation": "horizontal",
  "knob_size": "md",
  "group_direction": "row",
  "slider_height": 180.0,
  "show_visualizations": true,
  "columns_visible": [
    "config",
    "main"
  ],
  "columns_collapsed": [],
  "visible_group_ids": [
    "REDUCTION",
    "TIMING",
    "SPECTRAL SUB",
    "NOISE PROFILE",
    "CURVE",
    "MONITOR"
  ],
  "overflow_group_ids": [],
  "config_controls": [
    {
      "param_index": 5,
      "param_name": "Low Latency",
      "control_type": "toggle",
      "unit": "",
      "range": [
        0.0,
        1.0
      ],
      "read_only": false,
      "enabled": true
    }
  ],
  "main_groups": [
    {
      "id": "REDUCTION",
      "title": "REDUCTION",
      "controls": [
        {
          "param_index": 0,
          "param_name": "Reduction",
          "control_type": "vertical_slider",
          "unit": "dB",
          "range": [
            0.0,
            40.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 1,
          "param_name": "Floor",
          "control_type": "vertical_slider",
          "unit": "dB",
          "range": [
            -60.0,
            -10.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 2,
          "param_name": "Smoothing",
          "control_type": "vertical_slider",
          "unit": "",
          "range": [
            0.0,
            0.99
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 11,
          "param_name": "Transparency",
          "control_type": "vertical_slider",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        }
      ]
    },
    {
      "id": "TIMING",
      "title": "TIMING",
      "controls": [
        {
          "param_index": 3,
          "param_name": "Attack",
          "control_type": "knob",
          "unit": "ms",
          "range": [
            0.1,
            100.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 4,
          "param_name": "Release",
          "control_type": "knob",
          "unit": "ms",
          "range": [
            10.0,
            500.0
          ],
          "read_only": false,
          "enabled": true
        }
      ]
    },
    {
      "id": "SPECTRAL SUB",
      "title": "SPECTRAL SUB",
      "controls": [
        {
          "param_index": 17,
          "param_name": "Spectral Sub",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 18,
          "param_name": "Oversub Factor",
          "control_type": "knob",
          "unit": "",
          "range": [
            0.5,
            6.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 19,
          "param_name": "Spectral Floor",
          "control_type": "knob",
          "unit": "",
          "range": [
            0.001,
            0.5
          ],
          "read_only": false,
          "enabled": true
        }
      ]
    },
    {
      "id": "NOISE PROFILE",
      "title": "NOISE PROFILE",
      "controls": [
        {
          "param_index": 20,
          "param_name": "Learn Noise",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 21,
          "param_name": "Use Profile",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 22,
          "param_name": "Clear Profile",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        }
      ]
    },
    {
      "id": "CURVE",
      "title": "CURVE",
      "controls": [
        {
          "param_index": 29,
          "param_name": "Curve Low",
          "control_type": "knob",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 30,
          "param_name": "Curve Mid",
          "control_type": "knob",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 31,
          "param_name": "Curve High",
          "control_type": "knob",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        }
      ]
    },
    {
      "id": "MONITOR",
      "title": "MONITOR",
      "controls": [
        {
          "param_index": 32,
          "param_name": "Audition Residual",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        }
      ]
    }
  ],
  "output_controls": [],
  "tabs": [
    {
      "name": "Analysis",
      "controls": [
        {
          "param_index": 6,
          "param_name": "Polyphonic",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 12,
          "param_name": "DD SNR",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 13,
          "param_name": "DD Alpha",
          "control_type": "knob",
          "unit": "",
          "range": [
            0.5,
            0.999
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 14,
          "param_name": "Psychoacoustic",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 15,
          "param_name": "Spectral Smooth",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 16,
          "param_name": "Temporal Smooth",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        }
      ]
    },
    {
      "name": "MCRA",
      "controls": [
        {
          "param_index": 7,
          "param_name": "MCRA Alpha S",
          "control_type": "knob",
          "unit": "",
          "range": [
            0.5,
            0.99
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 8,
          "param_name": "MCRA Alpha P",
          "control_type": "knob",
          "unit": "",
          "range": [
            0.1,
            0.99
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 9,
          "param_name": "MCRA Window",
          "control_type": "knob",
          "unit": "fr",
          "range": [
            10.0,
            200.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 10,
          "param_name": "MCRA Delta",
          "control_type": "knob",
          "unit": "",
          "range": [
            1.0,
            20.0
          ],
          "read_only": false,
          "enabled": true
        }
      ]
    },
    {
      "name": "Formant",
      "controls": [
        {
          "param_index": 23,
          "param_name": "Formant Preserve",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 24,
          "param_name": "Formant Strength",
          "control_type": "knob",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": false
        }
      ]
    },
    {
      "name": "Advanced",
      "controls": [
        {
          "param_index": 25,
          "param_name": "Multi-Res",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 26,
          "param_name": "Harmonic/Percussive",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 27,
          "param_name": "Spatial Denoise",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 28,
          "param_name": "Spatial Strength",
          "control_type": "knob",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": false
        }
      ]
    }
  ],
  "viz_slots": [],
  "dynamic_sections": []
}
